force-app/main/default/objects/Approval_Threshold__mdt/Approval_Threshold__mdt.object-meta.xml
<CustomObject>
    <label>Approval Threshold</label>
    <pluralLabel>Approval Thresholds</pluralLabel>
</CustomObject>