force-app/main/default/objects/Approval_Threshold__mdt/fields/Approver_Role_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role_Developer_Name__c</fullName>
    <label>Approver Role Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>