force-app/main/default/objects/Approval_Threshold__mdt/fields/Min_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Min_Discount_Pct__c</fullName>
    <inlineHelpText>Level applies when discount is strictly greater than this value.</inlineHelpText>
    <label>Discount % Above</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>